# Virtu

./: .gitignore  Cargo.toml  LICENSE  README.md
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: virtu.spec
packaging/share/man/: virtu.1
src/: cli.rs  lib.rs  main.rs
src/config/: atomic_write.rs  bootloader.rs  mod.rs
src/config/writers/: commands.rs  grub.rs  hooks.rs  mod.rs  systemd_boot.rs  vfio_modprobe.rs
src/config/writers/initramfs/: dracut.rs  mkinitcpio.rs  mod.rs  update_initramfs.rs
src/detect/: audio.rs  bootloader.rs  cpu.rs  display_manager.rs  display_server.rs  distro.rs  gpu.rs  initramfs.rs  iommu.rs  memory.rs  mod.rs  monitors.rs  readiness.rs  storage.rs  usb.rs  virtualization.rs
src/engine/: compatibility.rs  diagnostics.rs  executor.rs  mod.rs  planner.rs  resume.rs  step.rs  vm_xml.rs
src/kb/: mod.rs  schema.rs
src/kb/data/: error_patterns.toml  gpu_quirks.toml
src/snapshot/: fs.rs  manifest.rs  mod.rs  pending.rs
src/tui/: mod.rs
src/tui/screens/: choices.rs  detection.rs  mod.rs  preview.rs
src/vm/: cpu_topology.rs  mod.rs  passthrough.rs  profile.rs  validation.rs
src/vm/xml/: mod.rs
src/vm/xml/devices/: cpu.rs  disk.rs  features.rs  firmware.rs  gpu_hostdev.rs  input.rs  memory.rs  mod.rs  network.rs  tpm.rs
tests/: HARDWARE_MATRIX.md  RESULTS_TEMPLATE.md  capture_fixture_smoke.rs  compatibility_report.rs  detection_parsers.rs  passthrough_validation.rs  phase_a_executor.rs  phase_b_full_cycle.rs  plan_engine.rs  single_gpu_hooks.rs  snapshot_engine.rs
tests/fixtures/audio/pipewire/run/user/1000/: pactl-info
tests/fixtures/audio/pulseaudio/run/user/1000/: pactl-info
tests/fixtures/bootloaders/grub/boot/grub/: grub.cfg
tests/fixtures/bootloaders/grub/etc/default/: grub
tests/fixtures/bootloaders/systemd/boot/loader/entries/: arch.conf
tests/fixtures/display/greetd/etc/systemd/system/: greetd.service
tests/fixtures/etc/: os-release-opensuse  os-release-opensuse-leap  os-release-pop  os-release-ubuntu
tests/fixtures/initramfs/arch/etc/: mkinitcpio.conf
tests/fixtures/initramfs/fedora/etc/dracut.conf.d/: virtu.conf
tests/fixtures/proc/: cpuinfo-intel-2socket-ht  meminfo-basic
tests/fixtures/readiness-fedora/etc/: virtu-user-groups
tests/fixtures/readiness-fedora/proc/: cmdline  modules
tests/fixtures/readiness-fedora/proc/sys/kernel/: osrelease
tests/fixtures/readiness-fedora/var/lib/libvirt/: virsh-list-all
tests/fixtures/readiness/etc/: virtu-user-groups
tests/fixtures/readiness/proc/: cmdline  modules
tests/fixtures/readiness/proc/sys/kernel/: osrelease
tests/fixtures/readiness/var/lib/libvirt/: virsh-list-all
tests/fixtures/sysfs/bus/pci/devices/0000_00_02.0/: device  label
tests/fixtures/sysfs/bus/pci/devices/0000_01_00.0/: device  subsystem_device
tests/fixtures/sysfs/bus/pci/devices/0000_01_00.1/: device  driver_name
tests/fixtures/sysfs/class/drm/card0/: device
tests/fixtures/sysfs/class/drm/card0-eDP-1/: modes
tests/fixtures/sysfs/class/drm/card1/: device
tests/fixtures/sysfs/class/drm/card1-DP-1/: modes
tests/fixtures/sysfs/kernel/iommu_groups/16/devices/0000_02_00.1/: device
tests/fixtures/usb/dev/input/by-id/: usb-8BitDo_Controller-event-joystick  usb-Logitech_G502_HERO_Gaming_Mouse-event-mouse  usb-Logitech_USB_Keyboard-event-kbd
tests/fixtures/usb/sys/class/input/event5/device/id/: product  vendor
tests/fixtures/usb/sys/class/input/event6/device/id/: product
tests/fixtures/usb/sys/class/input/event7/device/id/: vendor
tests/scripts/: README.md  capture_fixture.sh  run_hardware_test.sh
