[package]
name = "virtu"
version = "0.1.0"
edition = "2021"
description = "GPU passthrough automation tool for Linux"
authors = ["Virtu Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/H-Sami/Virtu"

[[bin]]
name = "virtu"
path = "src/main.rs"

[dependencies]
# TUI
ratatui        = "0.26"
crossterm      = "0.27"

# Async runtime. The `full` feature is convenient but pulls in more
# than Virtu strictly needs; trimming it is scoped for a Phase-10
# polish pass once the feature surface stabilizes.
tokio          = { version = "1", features = ["full"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
toml           = "0.8"

# Error handling
anyhow         = "1"
thiserror      = "1"

# CLI
clap           = { version = "4", features = ["derive", "color", "env"] }

# Logging / tracing
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender     = "0.2"

# File I/O
tempfile       = "3"

# Process management
which          = "6"

# Unix account checks and runtime-dir discovery. Calls are cfg-gated so the
# crate still checks on non-Linux development machines.
libc           = "0.2"

# Date/time
chrono         = { version = "0.4", features = ["serde"] }

# Hashing (for snapshot manifests)
sha2           = "0.10"
hex            = "0.4"

# Regex (error pattern matching in diagnostics)
regex          = "1"

# UUID for libvirt domain XML <uuid> generation
uuid           = { version = "1", features = ["v4"] }

[dev-dependencies]
# `tempfile` is also a runtime dep, but cargo permits the duplicate
# declaration so dev-only features can be added later without
# touching the release surface.
tempfile       = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
opt-level     = 0
debug         = true
